; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_apply.c_dss_mgr_set_timings_compat.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_apply.c_dss_mgr_set_timings_compat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap_overlay_manager = type { i32 }
%struct.omap_video_timings = type { i32 }
%struct.mgr_priv_data = type { i64 }

@data_lock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [57 x i8] c"cannot set timings for %s: manager needs to be disabled\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.omap_overlay_manager*, %struct.omap_video_timings*)* @dss_mgr_set_timings_compat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dss_mgr_set_timings_compat(%struct.omap_overlay_manager* %0, %struct.omap_video_timings* %1) #0 {
  %3 = alloca %struct.omap_overlay_manager*, align 8
  %4 = alloca %struct.omap_video_timings*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.mgr_priv_data*, align 8
  store %struct.omap_overlay_manager* %0, %struct.omap_overlay_manager** %3, align 8
  store %struct.omap_video_timings* %1, %struct.omap_video_timings** %4, align 8
  %7 = load %struct.omap_overlay_manager*, %struct.omap_overlay_manager** %3, align 8
  %8 = call %struct.mgr_priv_data* @get_mgr_priv(%struct.omap_overlay_manager* %7)
  store %struct.mgr_priv_data* %8, %struct.mgr_priv_data** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @spin_lock_irqsave(i32* @data_lock, i64 %9)
  %11 = load %struct.mgr_priv_data*, %struct.mgr_priv_data** %6, align 8
  %12 = getelementptr inbounds %struct.mgr_priv_data, %struct.mgr_priv_data* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load %struct.omap_overlay_manager*, %struct.omap_overlay_manager** %3, align 8
  %17 = getelementptr inbounds %struct.omap_overlay_manager, %struct.omap_overlay_manager* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @DSSERR(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %24

20:                                               ; preds = %2
  %21 = load %struct.omap_overlay_manager*, %struct.omap_overlay_manager** %3, align 8
  %22 = load %struct.omap_video_timings*, %struct.omap_video_timings** %4, align 8
  %23 = call i32 @dss_apply_mgr_timings(%struct.omap_overlay_manager* %21, %struct.omap_video_timings* %22)
  br label %24

24:                                               ; preds = %20, %15
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @spin_unlock_irqrestore(i32* @data_lock, i64 %25)
  ret void
}

declare dso_local %struct.mgr_priv_data* @get_mgr_priv(%struct.omap_overlay_manager*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @DSSERR(i8*, i32) #1

declare dso_local i32 @dss_apply_mgr_timings(%struct.omap_overlay_manager*, %struct.omap_video_timings*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
